--- a/_config.scss
+++ b/_config.scss
@@ -1,8 +1,21 @@
 // *-----------------------------------------------------------------
-// * Configuration SCSS
 // *
-// * This file Hold All the Default Configurations.
+// * SCSS Configuration
+// *
+// * @author      : Tafhimul Kabir
+// * @version     : 0.0.01
+// * @copyright   : Public Domain
+// * @date        : 2023/10/14
+// *
+// * @description : This SCSS configuration file contains default settings
+// *                 and variables used in the project's stylesheets. It
+// *                 defines important values like the base font size, media
+// *                 query breakpoints, and other global settings. These
+// *                 settings help maintain consistency and facilitate
+// *                 responsive design.
+// *
 // *-----------------------------------------------------------------
+
 
 // *-----------------------------------------------------------------
 // * Base Font Size
