Add generate-media-range() function for generating media query range

--- a/module/media-query/_function.scss
+++ b/module/media-query/_function.scss
@@ -35,3 +35,104 @@
     @warn 'No previous breakpoint found for #{$breakpoint}.';
     @return null;
 }
+
+// *-----------------------------------------------------------------
+// * Generate Media Query Ranges
+// *
+// * This function generates a media query range with min-width 
+// * and/or max-width conditions for each breakpoint based on the 
+// * given parameters.
+// *
+// * @param $breakpoint (string) - The current breakpoint identifier.
+// * @param $media-type (string) - The media query type ("both", "max", or "min").
+// * @param $media-screen (string) - The screen type.
+// * @return (string) - Media query with min-width and/or max-width 
+// * conditions for each breakpoint based on the given parameters.
+// *-----------------------------------------------------------------
+@function generate-media-range($breakpoint, $media-type, $media-screen) {
+
+    $max-width: map-get($breakpoint-config, $breakpoint);
+    $min-width: get-previous-breakpoint($breakpoint, $breakpoint-config);
+
+    @if $max-width == null {
+        @warn "Breakpoint #{$breakpoint} does not exist.";
+        @return null;
+    }
+
+    @if $media-type == 'both' {
+
+        @if $query-type-config == 's2l' {
+
+            @if $breakpoint == $first-breakpoint {
+
+                @return '#{$media-screen} and (max-width: #{($max-width - 1)}px)';
+
+            } @else if $breakpoint == $last-breakpoint {
+
+                @return '#{$media-screen} and (min-width: #{$min-width}px) and (max-width: #{$max-width}px)';
+
+            } @else {
+
+                @return '#{$media-screen} and (min-width: #{$min-width}px) and (max-width: #{($max-width - 1)}px)';
+
+            }
+
+            @warn 'The breakpoint: #{$breakpoint} is not supported.';
+            @return null;
+
+        } @else if $query-type-config = 'l2s' {
+
+            @if $breakpoint == $first-breakpoint {
+
+                @return '#{$media-type} and (max-width: #{$max-width}px)';
+
+            } @else {
+
+                @return '#{$media-screen} and (min-width: #{($min-width + 1)}px) and (max-width: #{$max-width}px)';
+
+            }
+
+            @warn 'The breakpoint: #{$breakpoint} is not supported.';
+            @return null;
+
+        }
+
+        @warn 'The media query type: #{$query-type-config} is not supported.';
+        @return null;
+
+    } @else if $media-type == 'max' {
+
+        @if $query-type-config == 's2l' {
+
+            @return '#{$media-type} and (max-width: #{($max-width - 1)}px)';
+
+        } @else if $query-type-config = 'l2s' {
+
+            @return '#{$media-type} and (max-width: #{$max-width}px)';
+
+        }
+
+        @warn 'The breakpoint: #{$breakpoint} is not supported.';
+        @return null;
+
+    } @else if  $media-type == 'min' {
+
+        @if $query-type-config == 's2l' {
+
+            @return '#{$media-type} and (min-width: #{($max-width - 1)}px)';
+
+        } @else if $query-type-config = 'l2s' {
+
+            @return '#{$media-type} and (min-width: #{$max-width}px)';
+            
+        }
+
+        @warn 'The breakpoint: #{$breakpoint} is not supported.';
+        @return null;
+
+    }
+
+    @warn 'The media query type: #{$media-type} does not exist.';
+    @return null;
+
+}
