--- a/test/test.css
+++ b/test/test.css
@@ -163,3 +163,201 @@
     background-color: blueviolet;
   }
 }
+
+@media all and (max-width: 320px) {
+  .test__mq__xxs__both__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 321px) and (max-width: 480px) {
+  .test__mq__xs__both__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 481px) and (max-width: 768px) {
+  .test__mq__sm__both__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 769px) and (max-width: 1024px) {
+  .test__mq__md__both__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 1025px) and (max-width: 1280px) {
+  .test__mq__lg__both__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 1281px) and (max-width: 1440px) {
+  .test__mq__xl__both__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 1441px) and (max-width: 1920px) {
+  .test__mq__xxl__both__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 1921px) and (max-width: 2560px) {
+  .test__mq__xxxl__both__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (max-width: 320px) {
+  .test__mq__xxs__max__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (max-width: 480px) {
+  .test__mq__xs__max__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (max-width: 768px) {
+  .test__mq__sm__max__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (max-width: 1024px) {
+  .test__mq__md__max__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (max-width: 1280px) {
+  .test__mq__lg__max__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (max-width: 1440px) {
+  .test__mq__xl__max__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (max-width: 1920px) {
+  .test__mq__xxl__max__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (max-width: 2560px) {
+  .test__mq__xxxl__max__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 320px) {
+  .test__mq__xxs__min__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 480px) {
+  .test__mq__xs__min__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 768px) {
+  .test__mq__sm__min__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 1024px) {
+  .test__mq__md__min__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 1280px) {
+  .test__mq__lg__min__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 1440px) {
+  .test__mq__xl__min__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 1920px) {
+  .test__mq__xxl__min__all {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 2560px) {
+  .test__mq__xxxl__min__all {
+    background-color: aquamarine;
+  }
+}
+
+@media screen and (min-width: 1921px) and (max-width: 2560px) {
+  .test__mq__xxxl__both__screen {
+    background-color: aquamarine;
+  }
+}
+
+@media screen and (max-width: 2560px) {
+  .test__mq__xxxl__max__screen {
+    background-color: aquamarine;
+  }
+}
+
+@media screen and (min-width: 2560px) {
+  .test__mq__xxxl__min__screen {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 1500px) and (max-width: 1900px) {
+  .test__mq__custom__both__all {
+    background-color: aquamarine;
+  }
+}
+
+@media screen and (min-width: 1500px) and (max-width: 1900px) {
+  .test__mq__custom__both__screen {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (min-width: 1500px) {
+  .test__mq__custom__min__both__all {
+    background-color: aquamarine;
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  .test__mq__custom__min__both__screen {
+    background-color: aquamarine;
+  }
+}
+
+@media all and (max-width: 1500px) {
+  .test__mq__custom__max__both__all {
+    background-color: aquamarine;
+  }
+}
+
+@media screen and (max-width: 1500px) {
+  .test__mq__custom__max__both__screen {
+    background-color: aquamarine;
+  }
+}
