--- a/test/test.scss
+++ b/test/test.scss
@@ -1,196 +1,366 @@
 // Import Loader.
 @import '../loader';
 
-// Test get-previous-breakpoint() function.
 .test__previous__breakpoint__value {
     width: get-previous-breakpoint(sm);
 }
 
-// Test generate-media-range() function.
 .test__media__range__xs__both__all {
     @media #{generate-media-range(xxs, 'both', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xxs__both__all {
     @media #{generate-media-range(xs, 'both', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__sm__both__all {
     @media #{generate-media-range(sm, 'both', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__md__both__all {
     @media #{generate-media-range(md, 'both', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__lg__both__all {
     @media #{generate-media-range(lg, 'both', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xl__both__all {
     @media #{generate-media-range(xl, 'both', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xxl__both__all {
     @media #{generate-media-range(xxl, 'both', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xxxl__both__all {
     @media #{generate-media-range(xxxl, 'both', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xs__min__all {
     @media #{generate-media-range(xxs, 'min', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xxs__min__all {
     @media #{generate-media-range(xs, 'min', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__sm__min__all {
     @media #{generate-media-range(sm, 'min', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__md__min__all {
     @media #{generate-media-range(md, 'min', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__lg__min__all {
     @media #{generate-media-range(lg, 'min', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xl__min__all {
     @media #{generate-media-range(xl, 'min', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xxl__min__all {
     @media #{generate-media-range(xxl, 'min', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xxxl__min__all {
     @media #{generate-media-range(xxxl, 'min', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xs__max__all {
     @media #{generate-media-range(xxs, 'max', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xxs__max__all {
     @media #{generate-media-range(xs, 'max', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__sm__max__all {
     @media #{generate-media-range(sm, 'max', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__md__max__all {
     @media #{generate-media-range(md, 'max', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__lg__max__all {
     @media #{generate-media-range(lg, 'max', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xl__max__all {
     @media #{generate-media-range(xl, 'max', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xxl__max__all {
     @media #{generate-media-range(xxl, 'max', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xxxl__max__all {
     @media #{generate-media-range(xxxl, 'max', all)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xxxl__max__screen {
     @media #{generate-media-range(xxxl, 'max', screen)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xxxl__min__screen {
     @media #{generate-media-range(xxxl, 'min', screen)} {
         background-color: blueviolet;
     }
 }
 
-// Test generate-media-range() function.
 .test__media__range__xxxl__both__screen {
     @media #{generate-media-range(xxxl, 'both', screen)} {
         background-color: blueviolet;
+    }
+}
+
+.test__mq__xxs__both__all {
+    @include mq(xxs) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xs__both__all {
+    @include mq(xs) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__sm__both__all {
+    @include mq(sm) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__md__both__all {
+    @include mq(md) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__lg__both__all {
+    @include mq(lg) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xl__both__all {
+    @include mq(xl) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xxl__both__all {
+    @include mq(xxl) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xxxl__both__all {
+    @include mq(xxxl) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xxs__max__all {
+    @include mq-max(xxs) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xs__max__all {
+    @include mq-max(xs) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__sm__max__all {
+    @include mq-max(sm) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__md__max__all {
+    @include mq-max(md) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__lg__max__all {
+    @include mq-max(lg) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xl__max__all {
+    @include mq-max(xl) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xxl__max__all {
+    @include mq-max(xxl) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xxxl__max__all {
+    @include mq-max(xxxl) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xxs__min__all {
+    @include mq-min(xxs) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xs__min__all {
+    @include mq-min(xs) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__sm__min__all {
+    @include mq-min(sm) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__md__min__all {
+    @include mq-min(md) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__lg__min__all {
+    @include mq-min(lg) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xl__min__all {
+    @include mq-min(xl) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xxl__min__all {
+    @include mq-min(xxl) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xxxl__min__all {
+    @include mq-min(xxxl) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xxxl__both__screen {
+    @include mq(xxxl, screen) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xxxl__max__screen {
+    @include mq-max(xxxl, screen) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__xxxl__min__screen {
+    @include mq-min(xxxl, screen) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__custom__both__all {
+    @include mq-custom(1500, 1900) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__custom__both__screen {
+    @include mq-custom(1500, 1900, screen) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__custom__min__both__all {
+    @include mq-custom-min(1500) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__custom__min__both__screen {
+    @include mq-custom-min(1500, screen) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__custom__max__both__all {
+    @include mq-custom-max(1500) {
+        background-color: aquamarine;
+    }
+}
+
+.test__mq__custom__max__both__screen {
+    @include mq-custom-max(1500, screen) {
+        background-color: aquamarine;
     }
 }
