Add CSS unit converter

--- a/_config.scss
+++ b/_config.scss
@@ -68,4 +68,4 @@ $LAST_BREAKPOINT: 'xxxl';
 // * modifying values. Use 's2l' for small to large and 'l2s' for
 // * large to small media query transformations.
 // *-----------------------------------------------------------------
-$MEDIA_QUERY_TYPE: 'l2s';
+$MEDIA_QUERY_TYPE: 's2l';
