--- a/module/media-query/_variable.scss
+++ b/module/media-query/_variable.scss
@@ -7,7 +7,7 @@
 // * @copyright   : Public Domain
 // * @date        : 2023/10/17
 // *
-// * @description : This SCSS function file serves as a utility for 
+// * @description : This SCSS file serves as a utility for 
 // *                handling media queries. It contains configuration 
 // *                variables for responsive design. These variables 
 // *                are used to define breakpoints, media query types,
