--- a/_loader.scss
+++ b/_loader.scss
@@ -2,4 +2,5 @@
 
 @import
     'module/unit-converter/init',
-    'module/media-query/init';
+    'module/media-query/init',
+    'module/font-icon/init';
