--- a/module/media-query/_function.scss
+++ b/module/media-query/_function.scss
@@ -32,7 +32,7 @@
         @return map-get($breakpoint-config, $previous-key);
     }
 
-    @error 'No previous breakpoint found for #{$breakpoint}.';
+    @warn 'No previous breakpoint found for #{$breakpoint}.';
     @return null;
 }
 
