--- a/test/test.css
+++ b/test/test.css
@@ -389,3 +389,119 @@
   width: 800px;
   font-size: 28.8px;
 }
+
+@font-face {
+  font-family: "icomoon";
+  src: url("font/icomoon.eot?eajehf");
+  src: url("font/icomoon.eot?eajehf#iefix") format("embedded-opentype"), url("font/icomoon.ttf?eajehf") format("truetype"), url("font/icomoon.woff?eajehf") format("woff"), url("font/icomoon.svg?eajehf#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+[class^="icon-"], [class*="icon-"] {
+  font-family: "icomoon" !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-eye-sharp:before {
+  content: '\e902';
+}
+
+.icon-home:before {
+  content: '\e905';
+}
+
+.icon-pencil-sharp:before {
+  content: '\e906';
+}
+
+.icon-person:before {
+  content: '\e907';
+}
+
+.icon-person-add:before {
+  content: '\e908';
+}
+
+.icon-reader:before {
+  content: '\e90b';
+}
+
+.icon-settings-sharp:before {
+  content: '\e90f';
+}
+
+.icon-trash-sharp:before {
+  content: '\e90d';
+}
+
+.icon-eye:before {
+  content: '\e90e';
+}
+
+.icon-shopping-bag:before {
+  content: '\e912';
+}
+
+.icon-library_books:before {
+  content: '\e913';
+}
+
+.icon-dashboard:before {
+  content: '\e914';
+}
+
+.icon-minimize:before {
+  content: '\e909';
+}
+
+.icon-person_add_alt_1:before {
+  content: '\e915';
+}
+
+.icon-clear:before {
+  content: '\e90a';
+}
+
+.icon-dashboard1:before {
+  content: '\e917';
+}
+
+.icon-shopping_bag1:before {
+  content: '\e918';
+}
+
+.icon-maximize:before {
+  content: '\e90c';
+}
+
+.icon-shopping-bag2:before {
+  content: '\e91b';
+}
+
+.icon-user:before {
+  content: '\e91c';
+}
+
+.icon-book2:before {
+  content: '\e91d';
+}
+
+.icon-pencil1:before {
+  content: '\e911';
+}
+
+.icon-notebook:before {
+  content: '\e929';
+}
+
+.icon-book:before {
+  content: '\e923';
+}
