--- a/_loader.scss
+++ b/_loader.scss
@@ -3,4 +3,5 @@
 @import
     'module/unit-converter/init',
     'module/media-query/init',
-    'module/font-icon/init';
+    'module/font-icon/init',
+    'module/layout/init';
