--- a/test/test.css
+++ b/test/test.css
@@ -1,3 +1,98 @@
+.test__container__sm {
+  width: 1360px;
+}
+@media all and (max-width: 767px) {
+  .test__container__sm {
+    width: 100%;
+    padding: 0.9375em;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1023px) {
+  .test__container__sm {
+    width: 760;
+  }
+}
+@media all and (min-width: 1024px) and (max-width: 1279px) {
+  .test__container__sm {
+    width: 940;
+  }
+}
+@media all and (min-width: 1280px) and (max-width: 1439px) {
+  .test__container__sm {
+    width: 1060;
+  }
+}
+@media all and (min-width: 1440px) and (max-width: 1919px) {
+  .test__container__sm {
+    width: 1180;
+  }
+}
+@media all and (min-width: 1920px) and (max-width: 2560px) {
+  .test__container__sm {
+    width: 1280;
+  }
+}
+
+.test__container__md {
+  width: 1780px;
+}
+@media all and (max-width: 767px) {
+  .test__container__md {
+    width: 100%;
+    padding: 0.9375em;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1023px) {
+  .test__container__md {
+    width: 760;
+  }
+}
+@media all and (min-width: 1024px) and (max-width: 1279px) {
+  .test__container__md {
+    width: 1020;
+  }
+}
+@media all and (min-width: 1280px) and (max-width: 1439px) {
+  .test__container__md {
+    width: 1180;
+  }
+}
+@media all and (min-width: 1440px) and (max-width: 1919px) {
+  .test__container__md {
+    width: 1400;
+  }
+}
+@media all and (min-width: 1920px) and (max-width: 2560px) {
+  .test__container__md {
+    width: 1600;
+  }
+}
+
+.test__container__lg {
+  width: 2080px;
+}
+@media all and (max-width: 1279px) {
+  .test__container__lg {
+    width: 100%;
+    padding: 0.9375em;
+  }
+}
+@media all and (min-width: 1280px) and (max-width: 1439px) {
+  .test__container__lg {
+    width: 1180;
+  }
+}
+@media all and (min-width: 1440px) and (max-width: 1919px) {
+  .test__container__lg {
+    width: 1400;
+  }
+}
+@media all and (min-width: 1920px) and (max-width: 2560px) {
+  .test__container__lg {
+    width: 1600;
+  }
+}
+
 .test__previous__breakpoint__value {
   width: 480;
 }
