--- a/test/test.css
+++ b/test/test.css
@@ -600,3 +600,51 @@
 .icon-book:before {
   content: '\e923';
 }
+
+.test__column__even {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 0.9375em;
+}
+@media all and (min-width: 767px) {
+  .test__column__even {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 0.625em;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1023px) {
+  .test__column__even {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0.75em;
+  }
+}
+@media all and (min-width: 1024px) and (max-width: 1279px) {
+  .test__column__even {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0.875em;
+  }
+}
+
+.test__column__mixed {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 0.9375em;
+}
+@media all and (min-width: 767px) {
+  .test__column__mixed {
+    grid-template-columns: 2fr 5fr repeat(4, 1fr) 3fr;
+    gap: 0.625em;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1023px) {
+  .test__column__mixed {
+    grid-template-columns: 1fr 3fr repeat(3, 1fr) 2fr;
+    gap: 0.75em;
+  }
+}
+@media all and (min-width: 1024px) and (max-width: 1279px) {
+  .test__column__mixed {
+    grid-template-columns: 3fr 4fr 2fr;
+    gap: 0.875em;
+  }
+}
